<resources>
    <string name="app_name">Weather</string>
    <string name="label">Weather</string>
    <string name="loading_data">Loading data</string>
    <string name="btn_search">Search</string>
    <string name="show_wind">show Wind</string>
    <string name="show_humidity">show Humidity</string>
    <string name="show_pressure">show Pressure</string>
    <string name="false_off" translatable="false">false</string>
    <string name="true_on" translatable="false">true</string>
    <string name="city_name">City</string>
    <string name="about_app">About App Weather</string>
    <string name="author">Author: Alexey</string>
    <string name="attention_city_name">Enter the name of the city</string>
    <string name="moscow">Moscow</string>
    <string name="saint_petersburg">Saint-Petersburg</string>
    <string name="nav_header_subtitle">Menu</string>
    <string name="feedback">Feedback</string>
</resources>
